fixed a scrollbar issue

--- a/style.css
+++ b/style.css
@@ -193,8 +193,8 @@ footer {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: none;
   justify-content: center;
   align-items: center;
